feat(cleanup): implementation of management service, conversion of simulation to mutable class for easier async logic